<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpareReceivedOrderActivity">
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/xui_actionbar_height"
        android:background="?attr/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvReturn"
            style="@style/TextStyle.Title"
            android:textColor="@android:color/white"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:onClick="returnOnClick"
            android:text="@string/btn_return" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle.Title"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/title_spare_received" />

        <TextView
            android:id="@+id/tvSave"
            style="@style/TextStyle.Title"
            android:textColor="@android:color/white"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:onClick="saveOnClick"
            android:text="@string/btn_save" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@+id/tvOrderCode" android:layout_width="80.0dip" android:layout_height="36.0dip" android:layout_marginTop="8.0dip" android:text="@string/received_order_code" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/top_bar" style="@style/TextStyle.Content" />
    <TextView android:gravity="center_vertical" android:id="@+id/etOrderCode" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_marginTop="8.0dip" android:hint="@string/empty" android:ems="10" android:inputType="none" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvOrderCode" app:layout_constraintTop_toBottomOf="@id/top_bar" style="@style/TextStyle.Content" />
    <TextView android:gravity="center" android:id="@+id/tvAllocation" android:layout_width="80.0dip" android:layout_height="36.0dip" android:layout_marginTop="8.0dip" android:text="@string/allocation" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etOrderCode" style="@style/TextStyle.Content" />
    <EditText android:id="@+id/etAllocation" android:nextFocusDown="@id/etBarcode" android:layout_width="0.0dip" android:layout_height="36.0dip" android:hint="@string/empty" android:ems="10" android:singleLine="true" android:inputType="text" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvAllocation" app:layout_constraintTop_toTopOf="@id/tvAllocation" style="@style/EditText.Material" />
    <TextView android:gravity="center" android:id="@+id/tvBarcode" android:layout_width="80.0dip" android:layout_height="36.0dip" android:layout_marginTop="8.0dip" android:text="@string/barcode" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvAllocation" style="@style/TextStyle.Content" />
    <EditText android:id="@+id/etBarcode" android:nextFocusDown="@id/etBarcode" android:layout_width="0.0dip" android:layout_height="36.0dip" android:hint="@string/empty" android:ems="10" android:singleLine="true" android:inputType="text" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvBarcode" app:layout_constraintTop_toTopOf="@id/tvBarcode" style="@style/EditText.Material" />
    <ListView android:id="@+id/lvSpare" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvBarcode" style="@style/Widget.AppCompat.ListView" />
</androidx.constraintlayout.widget.ConstraintLayout>