<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductMoveActivity">
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/xui_actionbar_height"
        android:background="?attr/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvReturn"
            style="@style/TextStyle.Title"
            android:textColor="@android:color/white"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:onClick="returnOnClick"
            android:text="@string/btn_return" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle.Title"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/title_order_move" />

        <TextView
            android:id="@+id/tvSave"
            style="@style/TextStyle.Title"
            android:textColor="@android:color/white"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:onClick="saveOnClick"
            android:text="@string/btn_save" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@+id/tvOrderCode" android:layout_width="80dp" android:layout_height="?xui_config_size_edittext_height" android:layout_marginTop="8dp" android:text="@string/order_code" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/top_bar" style="@style/TextStyle.Content" />
    <TextView android:gravity="center_vertical" android:id="@+id/etOrderCode" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="0dp" android:layout_height="?xui_config_size_edittext_height" android:layout_marginTop="8dp" android:hint="@string/empty" android:ems="10" android:inputType="none" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvOrderCode" app:layout_constraintTop_toBottomOf="@id/top_bar" style="@style/TextStyle.Content" />
    <ListView android:id="@+id/lvSpare" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tvBarcode" />
    <TextView android:gravity="center" android:id="@+id/tvBarcode" android:layout_width="80dp" android:layout_height="?xui_config_size_edittext_height" android:layout_marginTop="8dp" android:text="@string/barcode" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvWarehouse" style="@style/TextStyle.Content" />
    <EditText android:id="@+id/etBarcode" android:nextFocusDown="@id/etBarcode" android:layout_width="0dp" android:layout_height="?xui_config_size_edittext_height" android:layout_marginTop="8dp" android:hint="@string/empty" android:ems="10" android:inputType="none" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvBarcode" app:layout_constraintTop_toBottomOf="@id/etAllocationIn" style="@style/TextStyle.Content" />
    <TextView android:gravity="center" android:id="@+id/tvWarehouse" android:layout_width="80dp" android:layout_height="?xui_config_size_edittext_height" android:layout_marginTop="8dp" android:text="@string/allocation_in" android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@id/etAllocationIn" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etOrderCode" style="@style/TextStyle.Content" />
    <EditText android:id="@+id/etAllocationIn" android:layout_width="0dp" android:layout_height="?xui_config_size_edittext_height" android:layout_marginTop="8dp" android:hint="@string/empty" android:ems="10" android:inputType="textPersonName" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvWarehouse" app:layout_constraintTop_toBottomOf="@id/etOrderCode" style="@style/TextStyle.Content" />
</androidx.constraintlayout.widget.ConstraintLayout>